--- a/static/stylesheets/simple-calendar.css
+++ b/static/stylesheets/simple-calendar.css
@@ -220,9 +220,8 @@ body .wx-sp-a.wx-un-clicked .layui-badge-dot {
 
 /*//@-今天的样式*/
 .sc-today {
-    /*background-color: orange;*/
-    /*color: white !important;*/
-    /*border: 1px solid orange;*/
+    background-color: orange;
+    border: 1px solid orange;
 }
 
 .sc-item .wx-day {
